# Ocean_animation

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  point.cpp  point.h
src/shader/: framebuffers_screen.fs  framebuffers_screen.vs  mapping.fs  mapping.vs
